[package]
name = "tacc_encoder_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "tacc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
thiserror = "1.0"
rustc-hash = "1.1"
thrift = "0.17"
flate2 = { version = "1.0", features = ["zlib-rs"] }

[dev-dependencies]
criterion = "0.5"
